[package]
name = "rnet-gen"
version = "0.3.0"
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Diggsey/rnet"
description = "Generator for rnet."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.1"
rnet = { version = "0.3.0", path = "../rnet" }
structopt = "0.3"
anyhow = "1.0"
heck = "0.3.3"
