[package]
name = "rnet-macros"
version = "0.2.0"
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Diggsey/rnet"
description = "Macros for rnet."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "visit-mut"] }
quote = "1.0"
darling = "0.13.0"
proc-macro2 = "1.0.29"
