[package]
name = "rnet"
version = "0.2.0"
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Diggsey/rnet"
description = "Easily call into Rust from C# or other .net langauges."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "0.2.7"
rnet-macros = { version = "0.2.0", path = "../rnet-macros" }
uuid = { version = "0.8.2", optional = true }
chrono = { version = "0.4.19", optional = true }
